[tool.poetry]
name = "pdf-redactor"
version = "0.0.1"
description = "A general purpose PDF text-layer redaction tool for Python 2/3"
authors = ["Joshua Tauberer <jt@occams.info>"]
maintainers = ["Stephen Badger <stephen.badger@vitalbeats.com>"]
license = "CC0-1.0"
classifiers = [
    'Development Status :: 4 - Beta',
	'Intended Audience :: Developers',
	'License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication',
	'Operating System :: OS Independent',
	'Programming Language :: Python',
	'Programming Language :: Python :: 2',
	'Programming Language :: Python :: 3',
	'Topic :: Office/Business',
	'Topic :: Software Development :: Libraries',
	'Topic :: Software Development :: Libraries :: Python Modules',
	'Topic :: Utilities'
]
include = ["LICENSE"]
readme = "README.md"
homepage = "https://github.com/vitalbeats/pdf-redactor"
repository = "https://github.com/vitalbeats/pdf-redactor"
keywords = ["pdf"]

[tool.poetry.dependencies]
python = "^3.7"
pdfrw = ">=0.4"
defusedxml = "^0.7.1"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[tool.poetry.scripts]
tests = "tests.run_tests:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
